# rcn

./: .flake8  .gitignore  README.md  cspell.json
codes/: .RX_model_batch.pro.swp  .file_rename.py.swp  .rx_model_batch_v2.py.swp  =2.21.1  RX_model_batch.pro  SeabornFig2Grid.py  circle.py  compute_rmp.py  confirmation.py  data_comparison.py  date_comparison.py  draping_field_plot.py  file_rename.py  get_bis.py  get_ca.py  get_rxben.py  get_shear.py  get_sw_fnc_w_mms.py  get_sw_params_jet.py  get_vcs.py  idl_ipy_comparison.py  img_to_gif.py  jet_reversal_check_v_20221020.py  jet_reversal_quick_check.py  jet_reversal_quick_check_beta.py  jet_reversal_quick_check_function.py  jet_reversal_quick_check_function_beta.py  jet_reversal_quick_check_function_v2.py  jet_reversal_quick_check_parallel.py  jet_reversal_quick_check_parallel_beta.py  jet_reversal_quick_check_steve.py  jet_reversal_times.py  line_dist.py  mayavi_plot.py  mms_crossing_confirmation.py  mms_plottings.py  model_run.py  msp_test.py  nested_are.py  parameter_test.py  (+64 more)
codes/idl_codes/: b_subsolar_shear_beta.pro  getshear.pro  idl_code_gh.pro  ridgefinder.pro  ridgefinder_oc.pro  rx_model_batch_v2.pro
codes/stein/: .~lock.mms_test.csv#  mail_1.txt  mms_omni.csv  test.sql
codes/stein/pyt/: disturbance_spectra.py~  regions.py  year_histogram.py  year_histogram_allSC.py~
codes/stein/pyt/outmatrix/: disturbance_spectrum_dst_disturbedFe.txt  disturbance_spectrum_dst_disturbedSi.txt  disturbance_spectrum_dst_quietboth.txt  disturbance_spectrum_f107_quietboth.txt  out_SiFeE_2001-06-01__2019-12-31__X020__R1320.txt  (+21 more)
(+186 files in other folders)
