[tool.isort]
profile = "black"
[tool.black]
line-length = 90
include = '\\.pyi?$'
exclude = '''
/(
    \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.poetry]
name = "rcn"
version = "0.1.0"
description = ""
authors = ["qudsiramiz <qudsiramiz@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
pyspedas = "^1.3.7"
tabulate = "^0.8.9"
trjtrypy = "^0.0.0"
joblib = "^1.2.0"
ipython = "8.10.0"
h5py = "^3.7.0"
spacepy = "^0.4.1"
scikit-image = "^0.19.3"
more-itertools = "^9.0.0"
seaborn = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
